<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:background="@drawable/popup_bg"
    android:elevation="@dimen/_10sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_popup_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/delete_warning"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_popup_warning" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_popup_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/yes"
        android:textColor="@color/warning_text"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_popup_no"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_popup_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/no"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_popup_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>
